2013-09-29  Per Bothner  <per@bothner.com>

	* rnrs/unicode.scm (string-foldcase): Update because
	nicodeUtils:foldCase changed return type to CharSequence.

2013-09-27  Jamison Hope <jrh@theptrgroup.com>

	* lists.scm (list-ref): Change to procedure with setter property.

2013-09-25  Per Bothner  <per@bothner.com>

	* lists.scm (list-set!): New R7RS procedure.
	(list-copy): Moved from srfi1.scm, and fixed handling of non-lists.

2013-09-24  Per Bothner  <per@bothner.com>

	* std_syntax.scm (%case): Add support for => in non-else clauses.

2013-09-22  Per Bothner  <per@bothner.com>

	* rnrs/programs.scm (command-line): Also check kawa.command.line
	property and ApplicationMainSupport:commandName variable when
	trying to figure out command name.

2013-09-20  Per Bothner  <per@bothner.com>

	* numbers.scm (infinite?): Change to match R7RS specification.

2013-09-18  Per Bothner  <per@bothner.com>

	* rnrs/programs.scm (command-line): More accurate/informative
	first argument.

2013-09-06  Per Bothner  <per@bothner.com>

	* strings.scm (define-compare): New non-exported helper macro.
	Use it to generalize various compare functions to varargs.
	(string=?, string<?, string>?, string<=?, string>=?): Re-implement.
	(string-ci=?, string-ci<?, string-ci>?, string-ci<=?, string-ci>=?,
	char-ci=?, char-ci<?, char-ci>?, char-ci<=?, char-ci>=?):
	Moved from unicode.scm and re-implement using define-compare.
	(char=,? char<? char>?, char<=?, char>=?): Moved from
	characters.scm and re-imlement.
	* unicode.scm (string-ci=?, string-ci<?, string-ci>?, string-ci<=?,
	string-ci>=?, char-ci=?, char-ci<?, char-ci>?, char-ci<=?,
	char-ci>=?): Moved to strings.scm, because of define-compare.
	* characters.scm (char=,? char<? char>?, char<=?, char>=?):
	Moved to strings.scm, because of define-compare.

	* characters.scm (digit-value): New function.
	* system.scm (get-environment-variable, get-environment-variables):
	New functions.

2013-09-06  Per Bothner  <per@bothner.com>