@@ -1,3 +1,7 @@
+2013-10-17  Per Bothner  <per@bothner.com>
+
+	* syntax.scm (import-handle-prefix): Adding working implementation.
+
 2013-09-29  Per Bothner  <per@bothner.com>
 
 	* rnrs/unicode.scm (string-foldcase): Update because
